kubectl_deploy/laa-great-ideas/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: laa-great-ideas
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: laa-great-ideas
    spec:
      containers:
      - name: laa-great-ideas
        image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/laa-great-ideas/laa-great-ideas:latest
        ports:
        - containerPort: 3000
