kubectl_deploy/laa-great-ideas/service.yml
kind: Service
apiVersion: v1
metadata:
  name: laa-great-ideas
  labels:
    app: laa-great-ideas
spec:
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  selector:
    app: laa-great-ideas
