kubectl_deploy/laa-great-ideas/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: laa-great-ideas
spec:
  rules:
  - host: laa-great-ideas-uat.apps.cloud-platform-live-0.k8s.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: laa-great-ideas
          servicePort: 3000
